--- a/HandyMap/HandyMap.html
+++ b/HandyMap/HandyMap.html
@@ -55,6 +55,7 @@
     </style>
 	  </head>
   <body>
+  <h1> Dit me Nam</h1>
     <input id="pac-input" class="controls" type="text" placeholder="Search Box">
     <div id="map"></div>
     <script>
